# KIAGO

./: README.md  convex_hull_test.py  main.py  pyproject.toml  requirements.txt  requirements_convex_hull.txt  train_tc_prediction_model.py
comparison_methods/rule_based/: README.md  generate_and_eval.py
comparison_methods/superdiff/: README.md  diffusion1d_v4_ilvr_unet_train.py  evaluate.py  evaluate_hsc.py  supercon_wtypes_parse.py  superdiff_guidance.py
comparison_methods/superdiff/ref_mat/: experiment_element_substitution_dict.json  experiment_hsc_dict.json
data_process_scripts/: create_COD_intermid.py  create_SuperCon_intermid.py  prepare_processed_dataset_.py
models/surrogate_model/: README.md
reference_sample_configs/: experiment_element_substitution_dict.json  experiment_usual_dict.json
sample_results/: optimized_solutions.csv  optimized_solutions.npz  result_df.csv  summary.csv
src/: config.py  elemnet.py  eval.py  forward_p_table_datamodules.py  initializer.py  inv_opt.py  inverse_datamodules.py  inverse_pl_module.py  loss.py  main_experiment.py  periodic_table.py  surrogate_eval.py  surrogate_models.py  surrogate_utils.py  utils.py  visualize_solution.py
