[project]
name = "kiago"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "smact (==2.5.5)",
    "pytorch-lightning (>=2.5.5,<3.0.0)",
    "pymatgen (>=2025.6.14,<2026.0.0)",
    "periodictable (>=2.0.2,<3.0.0)",
    "swifter (>=1.4.0,<2.0.0)",
    "omegaconf (>=2.3.0,<3.0.0)",
    "timm (>=1.0.20,<2.0.0)",
    "tensorboardx (>=2.6.4,<3.0.0)",
    "tensorboard (>=2.20.0,<3.0.0)",
    "atomate2 (>=0.0.21,<0.0.22)",
    "optuna (>=4.5.0,<5.0.0)",
    "denoising-diffusion-pytorch (>=2.2.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipython = ">=8,<9"

